package server;

public class Session {

	public Session(Server server) {
		
	}

}
